--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ deploy:
   api_key: ${OAUTH_TOKEN}
   file_glob: true
   file: ./dist/*
-  skip_cleanup: true
   on:
-    tags: true
+  repo: HyperledgerHandsOn/trade-finance-logistics
+  tags: true
